[package]
name = "berlewelch-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
berlewelch = { path = "../berlewelch" }
guard = "0.5.1"
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["HtmlDivElement", "DomTokenList"] }
yew = "0.19.3"
yewdux = "0.8.2"
